// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The FullHeightCard is rendered including some props 1`] = `
.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #fff;
  width: 100%;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c2 {
  margin: 0;
  padding: 12px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 {
  height: 100%;
}

<div
  className="CourseCard_Empty c0 c1"
  id="Test01"
>
  <div
    className="c2"
  />
</div>
`;

exports[`The FullHeightCard is rendered including the CardBanner and CardDetails components 1`] = `
.c6 {
  position: absolute;
  top: 8px;
  left: -8px;
  font-weight: 500;
  color: #fff;
  line-height: 16px;
  background-color: #a4286a;
  padding: 8px 16px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c7 {
  position: absolute;
  top: 40px;
  left: -8px;
  border-top: 8px solid #6c2548;
  border-left: 8px solid transparent;
}

.c5 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #fff;
  width: 100%;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c3 {
  width: 100%;
  vertical-align: bottom;
}

.c8 {
  margin: 0;
  padding: 12px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c4 {
  margin: 16px 8px 0px 16px;
  display: block;
  font-weight: 400;
  font-size: 1.5em;
  line-height: 1.2;
  color: #a4286a;
}

.c2 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #a4286a;
}

.c0 {
  height: 100%;
}

.c12 {
  cursor: pointer;
  color: #000;
  white-space: nowrap;
  display: block;
  border-radius: 4px;
  background-color: #ddd;
  padding: 12px 16px;
  box-shadow: inset 0 -4px 0 rgba(0,0,0,0.2);
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  font-size: inherit;
  margin-top: 0;
  margin-bottom: 8px;
}

.c12:hover,
.c12:focus,
.c12:active {
  color: #000;
  background-color: #cecece;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c12:active {
  position: relative;
  top: 2px background-color:#cecece;
  box-shadow: none;
  -webkit-filter: none;
  filter: none;
}

.c13 {
  font-weight: bold;
}

.c11 {
  text-align: center;
}

.c10 li {
  position: relative;
  margin-left: 16px;
}

.c10 li:before {
  content: "✓";
  color: #77b227;
  position: absolute;
  font-weight: bold;
  display: inline-block;
  left: -16px;
}

.c9 {
  margin-bottom: 12px;
  border-bottom: 1px #ddd solid;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="CourseCard c0 c1"
  id="Test02"
>
  <a
    className="c2"
    href="https://yoast.com/academy/keyword-research-training/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <img
      alt="Keyword Research"
      className="c3"
      src="../wp-content/plugins/wordpress-seo/images/sample_course_card_header.png"
    />
    <h2
      className="c4"
    >
       
      Keyword Research
       
    </h2>
    <span
      className="c5"
    >
      (Opens in a new browser tab)
    </span>
  </a>
  <span
    className="c6"
  >
    Free
  </span>
  <span
    className="c7"
  />
  <div
    className="c8"
  >
    <div
      className="c9"
    >
      <div
        className="c10"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Do you know the essential first step of good SEO? It’s keyword research. In this training, 
you’ll learn how to research and select the keywords that will guide searchers to your pages.",
          }
        }
      />
    </div>
    <div
      className="c11"
    >
      <a
        className="c12"
        href="https://yoast.com/cart/?add-to-cart=1311259"
        rel="noopener noreferrer"
        target="_blank"
      >
        Start your free trail
        <span
          className="c5"
        >
          (Opens in a new browser tab)
        </span>
      </a>
      <a
        className="c13"
        href="https://yoast.com/academy/keyword-research-training/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Read more about this training »
        <span
          className="c5"
        >
          (Opens in a new browser tab)
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`The empty Card component matches the snapshot 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #fff;
  width: 100%;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  margin: 0;
  padding: 12px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="c0"
  id=""
>
  <div
    className="c1"
  />
</div>
`;
